添加简历内容

--- a/Demo/basicDemo/aResume/index.html
+++ b/Demo/basicDemo/aResume/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ooeyDotMango的简历</title>
+    <title>ZooeyDotMango的简历</title>
 </head>
 <body>
-
+<header><h1>简历</h1></header>
+<section>
+    <h2>个人信息</h2>
+    <p>姓名：zooeydotmango</p>
+</section>
+<section>
+    <h2>技能掌握</h2>
+    <p>Html/CSS/Js/Bootstrap/Jquery/...</p>
+</section>
+<section>
+    <h2>项目经验</h2>
+    <p>项目经验1：xxx</p>
+    <p>主要内容：xxx</p>
+</section>
+<section>
+    <h2>自我评价</h2>
+    <p>一个普通人</p>
+</section>
 </body>
 </html>
-Z
