添加简历内容

--- a/Demo/basicDemo/aResume/index.html
+++ b/Demo/basicDemo/aResume/index.html
@@ -6,25 +6,86 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ZooeyDotMango的简历</title>
+    <style>
+        h1{
+            color: mediumslateblue;
+            font-family: fantasy;
+        }
+        h2{
+            color: cornflowerblue;
+        }
+        p{
+            color: cadetblue;
+            font-family: "Gill Sans", sans-serif;
+            font-style: normal;
+            font-weight: 100;
+            font-size: 20px;
+            overflow: hidden;
+            line-height: 35px;
+            text-shadow: 1px 1px 1px cadetblue;
+        }
+        body{
+            text-align: center;
+        }
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        li{
+            color: cadetblue;
+            background: antiquewhite;
+        }
+        .container{
+            width: 40%;
+            left: 30%;
+            position: relative;
+            background: seashell;
+        }
+        .judge{
+            text-decoration: line-through;
+        }
+        .skill{
+            text-align: left;
+            text-indent: 50px;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
 <header><h1>简历</h1></header>
+<hr>
 <section>
     <h2>个人信息</h2>
-    <p>姓名：zooeydotmango</p>
+    <p>姓名：zooeydotmango<br>年龄：xx<br>大学：xxxx</p>
 </section>
+<hr>
 <section>
     <h2>技能掌握</h2>
-    <p>Html/CSS/Js/Bootstrap/Jquery/...</p>
+    <p class="skill">我是谁我在哪我在打谁谁在打我我是谁我在哪我在打谁谁在打我我是谁我在哪我在打谁谁在打我我是谁我在哪我在打谁谁在打我我是谁我在哪我在打谁谁在打我
+    </p>
 </section>
+<hr>
 <section>
     <h2>项目经验</h2>
     <p>项目经验1：xxx</p>
-    <p>主要内容：xxx</p>
+    <ul>
+        <li>项目内容：xxxxxxxxxxxxxx。</li>
+        <li>我负责的内容：xxxxxxxx。</li>
+        <li>学习到的知识：xxxxxxxx。</li>
+    </ul>
+    <p>项目经验2：xxx</p>
+    <ul>
+        <li>项目内容：xxxxxxxxxxxxxx。</li>
+        <li>我负责的内容：xxxxxxxx。</li>
+        <li>学习到的知识：xxxxxxxx。</li>
+    </ul>
 </section>
+<hr>
 <section>
     <h2>自我评价</h2>
-    <p>一个普通人</p>
+    <p class="judge">菜的抠脚</p><p>梦想成为一个对社会有贡献的前端工程师</p>
 </section>
+</div>
 </body>
 </html>
