添加简历内容

--- a/Demo/basicDemo/aResume/index.html
+++ b/Demo/basicDemo/aResume/index.html
@@ -36,6 +36,11 @@
             color: cadetblue;
             background: antiquewhite;
         }
+        footer{
+            color: cadetblue;
+            font-style: italic;
+            font-size: 10px;
+        }
         .container{
             width: 40%;
             left: 30%;
@@ -86,6 +91,12 @@
     <h2>自我评价</h2>
     <p class="judge">菜的抠脚</p><p>梦想成为一个对社会有贡献的前端工程师</p>
 </section>
+    <footer class="footer">
+        <address>
+            Written By:<a href="mailto:myemail@email.com">zooeydotmango</a><br>
+            Visit me at:南京
+        </address>
+    </footer>
 </div>
 </body>
 </html>
