--- a/Demo/basicDemo/aResume/index.html
+++ b/Demo/basicDemo/aResume/index.html
@@ -7,53 +7,81 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ZooeyDotMango的简历</title>
     <style>
-        h1{
-            color: mediumslateblue;
-            font-family: fantasy;
-        }
-        h2{
-            color: cornflowerblue;
-        }
-        p{
-            color: cadetblue;
-            font-family: "Gill Sans", sans-serif;
-            font-style: normal;
-            font-weight: 100;
-            font-size: 20px;
-            overflow: hidden;
-            line-height: 35px;
-            text-shadow: 1px 1px 1px cadetblue;
-        }
-        body{
-            text-align: center;
-        }
-        ul{
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-        li{
-            color: cadetblue;
-            background: antiquewhite;
-        }
-        footer{
-            color: cadetblue;
-            font-style: italic;
-            font-size: 10px;
-        }
-        .container{
-            width: 40%;
-            left: 30%;
-            position: relative;
-            background: seashell;
-        }
-        .judge{
-            text-decoration: line-through;
-        }
-        .skill{
-            text-align: left;
-            text-indent: 50px;
-        }
+        h1 {
+  color: mediumslateblue;
+  font-family: fantasy;
+}
+h2 {
+  color: cornflowerblue;
+}
+p {
+  color: cadetblue;
+  font-family: "Gill Sans", sans-serif;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 20px;
+  overflow: hidden;
+  line-height: 35px;
+  text-shadow: 1px 1px 1px cadetblue;
+}
+body {
+  text-align: center;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul li {
+  color: cadetblue;
+  background: url(https://mdn.mozillademos.org/files/13026/fire-ball-icon.png)
+      no-repeat 99% center scroll,
+    linear-gradient(to bottom, #fff, seashell);
+  padding: 20px;
+  /*   background-size: 30px 30px; */
+}
+a {
+  outline: none;
+  text-decoration: none;
+}
+a:link {
+  color: pink;
+}
+a:visited {
+  color: pruple;
+}
+a:focus {
+  border-bottom: 1px solid;
+  background-color: #000;
+}
+a:hover {
+  border-bottom: 1px solid;
+  background: #000;
+}
+a:active {
+  background: #fff;
+  color: #ccc;
+}
+footer {
+  color: cadetblue;
+  font-style: italic;
+  font-size: 10px;
+}
+.container {
+  width: 40%;
+  left: 30%;
+  position: relative;
+  background: seashell;
+  padding: 30px;
+}
+.judge {
+  text-decoration: line-through;
+}
+.skill {
+  text-align: left;
+  text-indent: 50px;
+}
+
     </style>
 </head>
 <body>
