resume第二个样式

--- a/Demo/basicDemo/aResume/resume.html
+++ b/Demo/basicDemo/aResume/resume.html
@@ -8,6 +8,7 @@
 <body>
 <div class="container">
     <header><h1>简历</h1></header>
+    <div class="main">
     <section>
         <h2>基本信息</h2>
         <h4>姓名</h4><p>张三</p>
@@ -44,6 +45,7 @@
         <h4>SAN Doc</h4>
         <p>作为文档工程师参与了SAN Doc的编写</p>
     </section>
+    </div>
 </div>
 </body>
 </html>
