resume第三个样式

--- a/Demo/basicDemo/aResume/resume.html
+++ b/Demo/basicDemo/aResume/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>简历</title>
-    <link rel="stylesheet" href="style_3.css">
+    <link rel="stylesheet" href="./css/style_3.css">
     <script>
         window.onload=function () {
             var linkCss = document.getElementsByTagName('link')[0],
@@ -11,13 +11,13 @@
                 type2 = document.getElementById('type2'),
                 type3 = document.getElementById('type3');
             type1.onclick = function(){
-                linkCss.href = "css/style_1.css";
+                linkCss.href = "./css/style_1.css";
             }
             type2.onclick = function(){
-                linkCss.href = "css/style_2.css";
+                linkCss.href = "./css/style_2.css";
             }
             type3.onclick = function(){
-                linkCss.href = "css/style_3.css";
+                linkCss.href = "./css/style_3.css";
             }
 
         }
