--- a/Demo/basicDemo/layout.html
+++ b/Demo/basicDemo/layout.html
@@ -6,13 +6,15 @@
     <style>
         body{
             margin: 0;
+            font-size: 10px
         }
         header  {
             width: 100%;
             min-width: 960px;
-            background: gray;
+            background: #333333;
         }
         header .head{
+            color:  white;
             margin: 0 auto;
             padding: 20px 0 30px;
             width: 960px;
@@ -20,18 +22,69 @@
             line-height: 20px;
         }
         header ul{
+            margin: 0;
+            padding: 0;
+            float: right;
             list-style-type: none;
+        }
+        header ul>li{
+            float: left;
+        }
+        header a{
+            color:  white   ;
+            font-size: 10px;
+            display: block;padding: 4px 4px;
+        }
+        .banner{
+            width: 100%;background-color: #66BB33;
+            height: 300px;
+            position: relative;
+        }
+        .banner ul{
+            position: absolute;
+            right: calc((100% - 960px)/2);
+            bottom: 15px;
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+        }
+        .banner ul>li{
+            float: left;
+        }
+        .banner a{
+            text-decoration: none;
+            display: inline-block;
+            padding: 10px 12px;border:#5A7E43 1px solid;
+            margin: 0 3px;
+            background: #B2DD99;
+            color: #66BB33;
+        }
+        .banner a.active{
+            position: relative;
+            padding-top: 20px;
+            background-color: #E0F1D6;
+            color: #5A7E43;
         }
     </style>
 </head>
 <body>
-<header><div class="head">Logo<nav>
+<header>
+    <div class="head">Logo
     <ul>
-        <li>Github</li>
-        <li>Register</li>
-        <li>Login</li>
-    </ul></nav></div></header>
-<div class="banner"></div>
+        <li><a href="#">Github</a></li>
+        <li><a href="#">Register</a></li>
+        <li><a href="#">Login</a></li>
+    </ul>
+    </div>
+</header>
+<div class="banner">
+    <ul>
+        <li><a href="#">1</a></li>
+        <li><a href="#" class="active">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+    </ul>
+</div>
 <nav></nav>
 <div class="content"></div>
 <footer></footer>
