--- a/Demo/basicDemo/layout.html
+++ b/Demo/basicDemo/layout.html
@@ -8,6 +8,7 @@
             margin: 0;
             font-size: 10px
         }
+        /*header*/
         header  {
             width: 100%;
             min-width: 960px;
@@ -35,6 +36,7 @@
             font-size: 10px;
             display: block;padding: 4px 4px;
         }
+        /*banner*/
         .banner{
             width: 100%;background-color: #66BB33;
             height: 300px;
@@ -65,6 +67,61 @@
             background-color: #E0F1D6;
             color: #5A7E43;
         }
+        /*nav*/
+        nav{
+            width: 960px;
+            margin: 15px auto 0;
+            border-bottom: 1px #DBDBDB solid;
+            overflow: auto;
+            padding: 0 calc((100% - 960px)/2);
+        }
+        nav ul{
+            margin: 0;
+            padding: 0 5px;
+            list-style-type: none;
+        }
+        nav ul>li{
+            display: block;
+            float: left;
+            padding: 10px 15px;
+            margin:0 -1px -1px 0;
+            border:  1px #DBDBDB solid;
+            border-radius: 15px 15px 0 0;
+            background: #EEEEEE;
+        }
+        nav ul>li.active{
+            background: white;
+            border-bottom: white;
+        }
+        /*content*/
+        .content{
+            display: flex;
+            margin: 0 auto;
+            width: 960px;
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+        .content div{
+            padding: 80px;
+            border: 1px #DBDBDB solid;
+            margin: 5px;
+            flex: 1 0 auto;
+            text-align: center;
+        }
+        /*footer*/
+        footer{
+            width: 100%;
+            background: #666666;
+            margin-top: 10px;
+            text-align: center;
+        }
+        address{
+            color: white;
+            font-style: normal;
+            text-decoration: none;
+            margin: 0 auto;
+            padding: 10px 0 40px 0;
+        }
     </style>
 </head>
 <body>
@@ -85,8 +142,29 @@
         <li><a href="#">4</a></li>
     </ul>
 </div>
-<nav></nav>
-<div class="content"></div>
-<footer></footer>
+<nav>
+    <ul>
+        <li class="active">HOME</li>
+        <li>PROFILE</li>
+        <li>ABOUT</li>
+    </ul>
+</nav>
+<div class="content">
+    <div>This is Content 1</div>
+    <div>MaybeContent 2</div>
+    <div>Content 3</div>
+    <div>Content 4</div>
+    <div>Content 5</div>
+    <div>Content 6</div>
+    <div>Content 7</div>
+    <div>Content 8</div>
+    <div>Content 9</div>
+    <div>Content 10</div>
+</div>
+<footer>
+    <address>
+        &copy 2018 ife.baidu.com
+    </address>
+</footer>
 </body>
 </html>
