--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -14,6 +14,7 @@
     html,body{
     		width: 100%;
     		height: 100%;
+        min-width: 970px;
     	}
     body{
     		font-family: 'Montserrat', sans-serif;
@@ -147,11 +148,12 @@
         background-size: 100% 100%;
         padding: 100px 0;
         display: flex;
+        /*flex-flow: row-reverse wrap;*/
         justify-content: flex-end;
     }
     .banner2 .wrapper{
         width: 550px;
-        margin-right: 135px;
+        margin-right: 10%;
     }
         .banner2 h2{
             font-size: 42px;
