--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -4,226 +4,7 @@
     <meta charset="UTF-8">
     <title>HelloWorld</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
-    <style type="text/css">
-    div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockquote,p{padding:0;margin:0;} 
-    *{box-sizing: border-box;}
-    li{list-style-type:none;} 
-    img{vertical-align:top;border:0;} 
-    ol,ul {list-style:none;} 
-    address,cite,code,em,th {font-weight:normal; font-style:normal;}
-    html,body{
-    		width: 100%;
-    		height: 100%;
-        min-width: 970px;
-    	}
-    body{
-    		font-family: 'Montserrat', sans-serif;
-    		margin: 0;
-    		padding: 0;
-    	}
-    .clearfix:after {
-        content:""; 
-        display:block; 
-        height:0; 
-        clear:both; 
-    }
-
-    /*helloWorld*/
-    .helloWorld{
-    	width: 100%;
-    	/*height: 100%;*/
-    	color: white;
-        padding: 210px 0;
-    	text-align: center;
-    	background: linear-gradient(rgba(20,20,20,0.65),rgba(20,20,20,.65)), 
-        url('./img/背景1.png') no-repeat ;
-        background-size: 100% 100%;
-    }
-    h1{
-    	font-size: 62px;
-    	font-weight: normal;
-        margin-bottom: 90px;
-    }
-    p{
-        font-size: 20px;
-        line-height: 32px;
-        opacity: 0.7;
-    }
-    .createAccount{
-        width: 970px;
-        margin: 105px auto 0;
-        border: 1px solid rgba(255,255,255,0.2);
-        padding: 50px 0 60px;
-    }
-    input,button{
-        font-family: inherit;
-        font-weight: bolder;
-    }
-    .createAccount p {
-        font-size: 12px;
-        margin: 15px 0 40px 0;
-        letter-spacing: 2px;
-    }
-    .createAccount input[type=text]{
-        width: 290px;
-        height: 50px;
-        background:transparent;
-        border-radius: 2px;
-        border: 1px solid rgba(255,255,255,0.2);
-        padding-left: 20px;
-        margin-right: 20px;
-        font-size: 14px;
-    }
-    .createAccount input[type=text].active::placeholder{
-        color: white;
-    }
-    button{
-        width: 125px;
-        height: 50px;
-        border-radius: 2px;
-        border: 1px solid white;
-        background: white;
-    }
-        /*banner1*/
-        .banner1{
-            width: 100%;
-            height: 710px;
-            text-align: center;
-        }
-        .banner1 h3{
-            font-size: 12px;
-            margin: 90px 0 40px 0;
-            letter-spacing: 2px;
-        }
-        .banner1 >h2{
-            display: inline-block;
-            width: 700px;
-            color: black;
-            font-size: 42px;
-            font-weight: bolder;
-            line-height: 52px;
-            opacity:1;
-        }
-        .banner1 .items-wrapper{
-            width: 1038px;
-            display: flex;
-            flex-flow: row wrap;
-            margin: 95px auto;
-            justify-content: space-between;
-        }
-    .banner1 .items:nth-of-type(1){
-        background: url("./img/images/banner (1).png") no-repeat left top;
-    }
-    .banner1 .items:nth-of-type(2){
-        background: url("./img/images/banner (2).png") no-repeat left top;
-    }
-    .banner1 .items:nth-of-type(3){
-         background: url("./img/images/banner (3).png") no-repeat left top;
-    }
-    .banner1 .items:nth-of-type(4){
-          background: url("./img/images/banner (4).png") no-repeat left top;
-    }
-    .banner1 .items{
-        	flex: 0 1 auto;
-            width: 450px;
-            height: 165px;
-            text-align:left;
-            padding-left: 72px;
-    }
-    .banner1 .items>h4{
-        	font-weight: bolder;
-        	font-size: 20px;
-    }
-    .banner1 .items>p{
-        	font-size: 16px;
-        	line-height: 26px;
-        	margin-top: 20px;
-    }
-    /*banner2*/
-    .banner2{
-        color: white;
-        width: 100%;
-        background: linear-gradient(rgba(20,20,20,.65),rgba(20,20,20,.65)),
-                    url("./img/banner2背景.png") no-repeat;
-        background-size: 100% 100%;
-        padding: 100px 0;
-        display: flex;
-        justify-content: space-between;
-    }
-    .banner2 .wrapper{
-        width: 550px;
-        margin-left: 20%;
-    }
-        .banner2 h2{
-            font-size: 42px;
-            color: white;
-            font-weight: normal;
-            display: inline-block;
-            width: 400px;
-            margin: 90px 0 40px 0;
-        }
-        .banner2 p{
-            display: inline-block;
-            width: 390px;
-            font-size: 18px;
-            line-height: 28px;
-            margin-bottom: 55px;
-        }
-        .banner2 button{
-            width: 240px;
-            height: 60px;
-            margin-right: 30px;
-            background: transparent;
-            color: white;
-            letter-spacing: 2px;
-            border: 1px solid rgba(255,255,255,0.3);
-        }
-        .banner2 button.active{
-            background: white;
-            color: black;
-        }
-        .banner2 .screen{
-            padding: 29px 0 29px 29px;
-            border: 1px solid rgba(255,255,255,0.5);
-            border-radius: 44px 0 0 44px;
-            border-right: none;
-        }
-        .banner2 .screen>span{
-            display: inline-block;
-            margin-top: calc(50% - 10px);
-            margin-right: 19px;
-            width: 10px;
-            height: 10px;
-            border: 1px solid rgba(255,255,255,0.5);
-            border-radius: 5px;
-        }
-        /*banner3*/
-        .banner3{
-            text-align: center;
-        }
-        .banner3 h2{
-            font-size: 42px;
-            line-height: 52px;
-        }
-        .wrapper-logo{
-            width: 1000px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-around;
-        }
-        .logo:nth-of-type(1){
-            background: url("./img/Singleton.png") no-repeat;
-        }
-        .logo:nth-of-type(2){
-        background: url("./img/Hero.png") no-repeat;
-        }
-        .logo:nth-of-type(3){
-        background: url("./img/Portland.png") no-repeat;
-        }
-        .logo{
-            
-        }
-    </style>
+    <link rel="stylesheet" href="./CSS/helloWorld.css">
 </head>
 <body>
 <header class="helloWorld">
