--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -44,7 +44,7 @@
 </section>
 <section class="banner3">
     <h2>Try Our Awesome Guys</h2>
-    <div class="wrapper-logo">
+    <div class="wrapper">
         <div class="logo">
             <p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
         </div>
@@ -55,8 +55,18 @@
             <p>Zhang Junyi, a partner with NIO Capital, said that the smart car is the trend for the car industry and China's auto sector will usher in a new key development stage with the improvement of infrastructure, technology, policies and laws.</p>
         </div>
     </div>
-    <div class="wrapper-pic">
-        
+    <hr>
+    <div class="wrapper">
+        <div class="pic"><img src="./img/pic1.png"></div>
+        <div class="p">
+        	<h4>Learn How to Improve Your Personal Business</h4>
+        	<p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+        </div>
+        <div class="pic"><img src="./img/pic2.png"></div>
+        <div class="p">
+        	<h4>Choose Between Two Beautifully Designed Color Schemes.</h4>
+        	<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+        </div>
     </div>
 </section>
 <section></section>
