--- a/Demo/basicDemo/HelloWorld/HelloWorld.html
+++ b/Demo/basicDemo/HelloWorld/HelloWorld.html
@@ -62,14 +62,60 @@
         	<h4>Learn How to Improve Your Personal Business</h4>
         	<p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
         </div>
-        <div class="pic"><img src="./img/pic2.png"></div>
         <div class="p">
-        	<h4>Choose Between Two Beautifully Designed Color Schemes.</h4>
-        	<p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+            <h4>Choose Between Two Beautifully Designed Color Schemes.</h4>
+            <p>China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
         </div>
+        <div class="pic"><img src="./img/pic2.png"></div>
     </div>
 </section>
-<section></section>
+<hr>
+<section class="crew">
+    <h2>Our Awesome Crew</h2>
+    <p>Our unique online teaching style makes learning easy for everyone. Whether you are trying to land a new job, brush up on your skills.</p>
+    <div class="wrapper">
+        <div class="userpic"><img src="./img/1.png" alt="">
+        <div class="cover">
+            <h4>Ethan Dutton</h4>
+            <p>Senior Visual Designer</p>
+            <div class="link">
+                <img src="./img/Facebook.png" alt="Facebook">
+                <img src="./img/Twitter.png" alt="Twitter">
+                <img src="./img/Instagram.png" alt="Instagram">
+            </div>
+        </div></div>
+        <div class="userpic"><img src="./img/2.png" alt="">
+        <div class="cover">
+            <h4>Ethan Dutton</h4>
+            <p>Senior Visual Designer</p>
+            <div class="link">
+                <img src="./img/Facebook.png" alt="Facebook">
+                <img src="./img/Twitter.png" alt="Twitter">
+                <img src="./img/Instagram.png" alt="Instagram">
+            </div>
+        </div></div>
+        <div class="userpic"><img src="./img/3.png" alt="">
+        <div class="cover">
+            <h4>Ethan Dutton</h4>
+            <p>Senior Visual Designer</p>
+            <div class="link">
+                <img src="./img/Facebook.png" alt="Facebook">
+                <img src="./img/Twitter.png" alt="Twitter">
+                <img src="./img/Instagram.png" alt="Instagram">
+            </div>
+        </div></div>
+        <div class="userpic"><img src="./img/4.png" alt="">
+        <div class="cover">
+            <h4>Ethan Dutton</h4>
+            <p>Senior Visual Designer</p>
+            <div class="link">
+                <img src="./img/Facebook.png" alt="Facebook">
+                <img src="./img/Twitter.png" alt="Twitter">
+                <img src="./img/Instagram.png" alt="Instagram">
+            </div>
+        </div></div>
+    </div>
+</section>
 <section></section>
 <footer></footer>
 </body>
